fix: align dropdown inside header container

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -19,6 +19,7 @@
     background-color: $white-color;
     display: flex;
     padding: 15px 10px;
+    position: relative;
     transition: all 150ms linear;
     transition: padding 300ms $animation-2;
 
